# SuperGame2025

./: CMakeLists.txt  README.md  config.txt
include/: Config.h  GameManager.h  GameState.h
src/: Config.cpp  GameManager.cpp  main.cpp
tests/: dummy.cpp
